Regression: Grease Pencil Sculpting on a Stroke affected by Subdivide and Offset modifier will crash Blender. #105625

Closed
opened 2023-03-10 06:53:36 +01:00 by concavepgons · 6 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.3.4, branch: master, commit date: 2023-02-20 11:51, hash: 5429ce1e0ad3
Worked: version: 2.93.15, branch: master, commit date: 2023-02-21 09:07, hash: a7633d6b57

Short description of error
Sculpting a Grease Pencil stroke affected by both Subdivide and Offset modifiers will eventually cause Blender to crash.

Exact steps for others to reproduce the error
Create a grease pencil object with a stroke.
Add a Subdivide and Offset modifier to the object.
Go into Sculpt mode and rapidly move all parts of the stroke (with a grab or push brush). It will eventually cause Blender to suddenly close.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.3.4, branch: master, commit date: 2023-02-20 11:51, hash: `5429ce1e0ad3` Worked: version: 2.93.15, branch: master, commit date: 2023-02-21 09:07, hash: a7633d6b57da **Short description of error** Sculpting a Grease Pencil stroke affected by both Subdivide and Offset modifiers will eventually cause Blender to crash. **Exact steps for others to reproduce the error** Create a grease pencil object with a stroke. Add a Subdivide and Offset modifier to the object. Go into Sculpt mode and rapidly move all parts of the stroke (with a grab or push brush). It will eventually cause Blender to suddenly close.
concavepgons added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-10 06:53:36 +01:00
Member

Hi, thanks for the report. I can confirm (introduced between 3.1-3.2 release).
Raising the priority even though its a not very recent regression.
cc @antoniov

Hi, thanks for the report. I can confirm (introduced between 3.1-3.2 release). Raising the priority even though its a not very recent regression. cc @antoniov

I can replicate it.

I can replicate it.

@PratikPB2123 I have added a fix in #105627

Now I cannot reproduce the bug crash... could you test it?

@PratikPB2123 I have added a fix in #105627 Now I cannot reproduce the bug crash... could you test it?
Antonio Vazquez self-assigned this 2023-03-10 10:48:42 +01:00
Member

@antoniov , applying your PR fixes the crash.

@antoniov , applying your PR fixes the crash.

@PratikPB2123 do you agree to apply the PR?

@PratikPB2123 do you agree to apply the PR?

@PratikPB2123 I have set you as reviewer of the PR...if agree, just approve and we can apply the PR.

@PratikPB2123 I have set you as reviewer of the PR...if agree, just approve and we can apply the PR.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-10 13:53:23 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-13 18:04:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105625
No description provided.