Fix #105625: GPencil sculpt crash with subdivide modifier

The created point hasn't a original point in the original stroke, so
must use only the valid points.

Pull Request: https://projects.blender.org/blender/blender/pulls/105627